--- a/pom.xml
+++ b/pom.xml
@@ -15,4 +15,16 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <distributionManagement>
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>ip-172-31-31-48-snapshots</name>
+        <url>http://172.31.31.48:8081/artifactory/libs-snapshot-local</url>
+    </snapshotRepository>
+    <repository>
+        <id>central</id>
+        <name>ip-172-31-31-48-releases</name>
+        <url>http://172.31.31.48:8081/artifactory/libs-release</url>
+    </repository>
+</distributionManagement>
 </project>
