--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,1 +1,24 @@
 
+node('maven-label') {
+   def mvnHome
+   stage('Preparation') {
+      
+      git branch: '$branch', url: 'https://github.com/app-cards/card-app.git'
+               
+      mvnHome = tool 'maven-3.6.1'
+   }
+   stage('Build') {
+      // Run the maven build
+      withEnv(["MVN_HOME=$mvnHome"]) {
+         if (isUnix()) {
+            sh '"$MVN_HOME/bin/mvn" -Dmaven.test.failure.ignore clean package'
+         } else {
+            bat(/"%MVN_HOME%\bin\mvn" -Dmaven.test.failure.ignore clean package/)
+         }
+      }
+   }
+   stage('Results') {
+      junit '**/target/surefire-reports/TEST-*.xml'
+      archiveArtifacts 'target/*.jar'
+   }
+}
